[project]
name = "libro-ai"
version = "0.1.14"
description = "libro ai"
authors = [
    { name = "brokun", email = "brokun0128@gmail.com" },
    { name = "sunshinesmilelk", email= "1176136681@qq.com"},
    { name = "zhanba", email = "c5e1856@gmail.com" }
]
dependencies = [
    "langchain>=0.3.3",
    "ipython>=7.34.0",
    "pydantic>=2.6.4",
    "requests>=2.31.0",
    "nbclient>=0.10.0",
    "libro-core>=0.1.6",
    "langchain-community>=0.3.2",
    "langchain_openai>=0.2.2"
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "langchain-openai>=0.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libro_ai"]
