[project]
name = "libro-flow"
version = "0.1.3"
description = "libro flow"
authors = [
    { name = "brokun", email = "brokun0128@gmail.com" },
    { name = "sunshinesmilelk", email= "1176136681@qq.com"},
    { name = "zhanba", email = "c5e1856@gmail.com" }
]
dependencies = [
    "nbformat>=5.5.0",
    "nbclient>=0.5.11",
    "jupyter_client>=7.4.8",
    "ipywidgets>=5.5.6",
    "pydantic>=2.6.4"
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "langchain-openai>=0.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libro_flow"]